# cmake-vcpkg-catch2-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
test/: CMakeLists.txt  example-test.cpp
